tests/paczka1/fuzzy1/41191302.err
Error in line 2: h35D3lfS A988 78,5
Error in line 4: h35D3lfS A251 2,9
Error in line 5: h35D3lfS A250 97,5
Error in line 12: OH7O8 A988 94,9
Error in line 36: A228 A988 42,6
